--- a/views/books/finished.mustache
+++ b/views/books/finished.mustache
@@ -22,12 +22,8 @@
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
                                     <thead>
                                     <tr>
-                                        <th>Path Name</th>
-                                        <th>Author</th>
-                                        <th>Title</th>
-                                        <th>Page</th>
-                                        <th>Started</th>
-                                        <th>Finished</th>
+                                        <th>#</th>
+                                        <th>Started - Finished</th>
                                         <th>Rate</th>
                                         <th>History</th>
                                         <th>Highlights</th>
@@ -36,12 +32,8 @@
                                     <tbody>
                                     {{#books}}
                                         <tr>
-                                            <td>{{pathName}}</td>
-                                            <td>{{author}}</td>
-                                            <td>{{title}}</td>
-                                            <td>{{page_count}}</td>
-                                            <td>{{start_date}}</td>
-                                            <td>{{finish_date}}</td>
+                                            <td><a data-toggle="tooltip" title="Path Name">{{pathName}}</a> / {{author}} - {{title}} ({{page_count}}pgs)</td>
+                                            <td>{{start_date}} - {{finish_date}}</td>
                                             <td>
                                                 {{#rate}}
                                                     {{rate}}
