Use ultimate_source

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -113,8 +113,7 @@
                                 {{{highlight}}}
 
                                 <footer class="blockquote-footer">
-                                    {{author}} <cite>{{source}}</cite> ~ {{created_at_formatted}}
-                                    /{{updated_at_formatted}}
+                                    {{ultimate_source}} ~ {{created_at_formatted}}/{{updated_at_formatted}}
 
                                     {{#tags}}
                                         <br><br>
