Comment keyword element

--- a/views/bookmarks/index.mustache
+++ b/views/bookmarks/index.mustache
@@ -101,9 +101,9 @@
                                                         <i class="fe fe-trash fe-4"></i>
                                                     </a>
 
-                                                    {{#keyword}}
-                                                        <span class="badge badge-pill badge-primary float-right">{{keyword}}</span>
-                                                    {{/keyword}}
+<!--                                                    {{#keyword}}-->
+<!--                                                        <span class="badge badge-pill badge-primary float-right">{{keyword}}</span>-->
+<!--                                                    {{/keyword}}-->
                                                     {{#imploded_tags}}
                                                         <span class="badge badge-pill badge-warning float-right">{{imploded_tags}}</span>
                                                     {{/imploded_tags}}
