--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -44,9 +44,7 @@
                                            class="form-control enterButtonKeyPress">
                                     <input id="source" placeholder="Source" type="text"
                                            class="form-control enterButtonKeyPress">
-                                    <input id="filename" placeholder="File Name" type="text"
-                                           class="form-control enterButtonKeyPress">
-                                    <input id="page" placeholder="Page" type="number"
+                                    <input id="blogPath" placeholder="Blog Path" type="text" value="general/uncategorized"
                                            class="form-control enterButtonKeyPress">
                                 </div>
 
@@ -58,7 +56,7 @@
                                                class="form-control enterButtonKeyPress">
                                     </div>
                                     <div class="form-group col-2">
-                                        <input id="blogPath" placeholder="Blog Path" type="text"
+                                        <input id="page" placeholder="Page" type="number"
                                                class="form-control enterButtonKeyPress">
                                     </div>
                                     <div class="form-group col-2">
@@ -234,7 +232,6 @@
                 var highlight = simplemde.value();
                 var author = $('#author').val();
                 var source = $('#source').val();
-                var fileName = $('#filename').val();
                 var page = $('#page').val();
                 var tags = $('#tags').val();
                 var is_encrypted = $('#is_encrypted').val();
@@ -246,7 +243,6 @@
                         "&source=" + encodeURIComponent(source) +
                         "&page=" + encodeURIComponent(page) +
                         "&tags=" + encodeURIComponent(tags) +
-                        "&filename=" + encodeURIComponent(fileName) +
                         "&blogPath=" + encodeURIComponent(blogPath) +
                         "&is_encrypted=" + encodeURIComponent(is_encrypted) +
                         "&is_secret=" + encodeURIComponent(is_secret);
