Fix not showing images for search results

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -216,6 +216,7 @@
                         Mustache.parse(template);
                         var rendered = Mustache.render(template, result);
                         $("#search-results").html(rendered);
+                        $(".lazy").Lazy();
                     }
                 }
             }
