--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -68,16 +68,35 @@
 
         $('#logTextArea').show();
 
+        var previousLog = simplemde.value();
+
         inlineAttachment.editors.codemirror4.attach(simplemde.codemirror, {
             uploadUrl: '/images'
         });
 
         $("#saveLog").on('click', function (e) {
 
-            var log = simplemde.value();
-            ajaxCall('POST', "/logs", "log=" + encodeURIComponent(log))
+            var currentLog = simplemde.value();
+
+            if (currentLog) {
+                ajaxCall('POST', "/logs", "log=" + encodeURIComponent(currentLog))
+            } else {
+                $.bootstrapPurr('Log cannot be null', {
+                    type: 'danger'
+                });
+            }
 
         });
+
+        setInterval(function () {
+            var currentLog = simplemde.value();
+
+            if (currentLog && currentLog !== previousLog) {
+                ajaxCall('POST', "/logs", "log=" + encodeURIComponent(currentLog))
+                previousLog = currentLog;
+            }
+
+        }, 10000);
 
     });
 </script>
