Add reading amount to logs view

--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -41,6 +41,7 @@
                                 {{#logs}}
                                     <h5 class="card-title"># {{date}}</h5>
                                     {{{log}}}
+                                    <strong>Reading:</strong> {{reading}}
                                 {{/logs}}
                             </div>
                         </div>
