Add complete field form element

--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="form-row">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="publisher">Publisher:</label>
                             <select id="publisher" name="publisher" class="form-control">
                                 <option disabled selected>Choose publisher</option>
@@ -38,10 +38,17 @@
                                 {{/publishers}}
                             </select>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label for="pageCount">Page Count:</label>
                             <input type="number" id="pageCount" name="pageCount" placeholder="Page Count"
                                    class="form-control">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="is_complete_book">Complete Book?</label>
+                            <select id="is_complete_book" name="is_complete_book" class="form-control">
+                                <option value="1">Yes</option>
+                                <option value="0">No</option>
+                            </select>
                         </div>
                     </div>
 
