--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -89,6 +89,11 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <a id="addToFavorite" role="button" class="badge" data-id="{{id}}"><span
+                                                class="fe fe-heart fe-8"></span></a>
+                                    </div>
+
+                                    <div class="form-group">
                                         <button id="updateHighlight" type="button" class="btn btn-primary"
                                                 data-id="{{id}}" {{#not_editable}}disabled{{/not_editable}}>
                                             Update
@@ -217,6 +222,14 @@
                 location.reload();
             }
 
+        });
+
+        $("#addToFavorite").on('click', function (e) {
+            var type = 'highlight';
+            var id = $(this).data("id");
+            var data = "id=" + encodeURIComponent(id) +
+                    "&type=" + encodeURIComponent(type)
+            ajaxCall('POST', "/favorites", data)
         });
 
         $('#updateHighlight').on('click', function (e) {
