--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -151,7 +151,7 @@
             if (e.keyCode == 13) {
                 var isbn = $('#isbn').val();
                 if (isbn !== "") {
-                    var result = ajaxCall('POST', "/books", "isbn=" + isbn);
+                    var result = ajaxCall('POST', "/books", "isbn=" + isbn + "&useAPI=1");
 
                     if (result !== false) {
                         $('#bookFormModal').modal('hide');
