--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -49,6 +49,8 @@
                                         <!--                                        <th>#</th>-->
                                         <th>Title</th>
                                         <th>Page</th>
+                                        <th>Add to Library</th>
+                                        <th>Highlights</th>
                                         <th>Add to Path</th>
                                     </tr>
                                     </thead>
@@ -69,6 +71,18 @@
                                                 {{/ebook}}
                                             </td>
                                             <td style="width:4%">{{page_count}}</td>
+                                            <td style="width:4%">
+                                                {{#add_to_library}}
+                                                    <button type="button"
+                                                            class="btn btn-sm btn-primary float-right btnAddToLibrary float-right"
+                                                            data-id="{{bookUID}}">Add
+                                                    </button>
+                                                {{/add_to_library}}
+                                            </td>
+                                            <td style="width:4%">
+                                                <a class="btn btn-sm btn-primary"
+                                                   href="/books/{{bookUID}}/highlights">Go</a>
+                                            </td>
                                             <td style="width:7%">
                                                 <div class="btn-group">
                                                     <button type="button"
@@ -84,13 +98,6 @@
                                                                data-book="{{bookUID}}">{{path_name}}</a>
                                                         {{/paths}}
                                                     </div>
-
-                                                    {{#add_to_library}}
-                                                        <button type="button"
-                                                                class="btn btn-primary btn-sm float-right btnAddToLibrary"
-                                                                data-id="{{bookUID}}">Add
-                                                        </button>
-                                                    {{/add_to_library}}
                                                 </div>
                                             </td>
                                         </tr>
