--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -51,7 +51,8 @@
 
                                     <div class="form-row">
                                         <div class="form-group col-md-6">
-                                            <input id="blog_path" placeholder="Blog Path" type="text" class="form-control"
+                                            <input id="blog_path" placeholder="Blog Path" type="text"
+                                                   class="form-control"
                                                    value="{{blog_path}}">
                                         </div>
                                         <div class="form-group col-md-3">
@@ -71,10 +72,17 @@
                                         </div>
                                     {{/link}}
 
-                                    <div class="form-group">
-                                        <input id="tags" placeholder="Tags" type="text" class="form-control"
-                                               value="{{#tags}}{{imploded_comma}}{{/tags}}">
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <input id="tags" placeholder="Tags" type="text" class="form-control"
+                                                   value="{{#tags}}{{imploded_comma}}{{/tags}}">
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <input id="title" placeholder="Title" type="text" class="form-control"
+                                                   value="{{title}}">
+                                        </div>
                                     </div>
+
 
                                     <div class="form-group custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="is_secret"
@@ -243,17 +251,19 @@
             var tags = $('#tags').val();
             var highlightID = $(this).data('id');
             var blogPath = $('#blog_path').val();
+            var title = $('#title').val();
             var is_secret = $('#is_secret').is(":checked") ? 1 : 0;
             var is_encrypted = $('#is_encrypted').is(":checked") ? 'Yes' : 'No';
             var data = "highlight=" + encodeURIComponent(highlight) +
                     "&author=" + encodeURIComponent(author) +
                     "&source=" + encodeURIComponent(source) +
-                    "&page=" + page +
-                    "&location=" + highlightLocation +
-                    "&link=" + link +
-                    "&tags=" + tags +
+                    "&page=" + encodeURIComponent(page) +
+                    "&location=" + encodeURIComponent(highlightLocation) +
+                    "&link=" + encodeURIComponent(link) +
+                    "&tags=" + encodeURIComponent(tags) +
+                    "&title=" + encodeURIComponent(title) +
                     "&blogPath=" + encodeURIComponent(blogPath) +
-                    "&is_secret=" + is_secret +
+                    "&is_secret=" + encodeURIComponent(is_secret) +
                     "&is_encrypted=" + encodeURIComponent(is_encrypted);
 
             var result = ajaxCall('PUT', "/highlights/" + highlightID, data)
