Change title variable name

--- a/views/include/head.mustache
+++ b/views/include/head.mustache
@@ -3,7 +3,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>{{title}}</title>
+<title>{{pageTitle}}</title>
 <!-- Simple bar CSS -->
 <link rel="stylesheet" href="/css/simplebar.css">
 <!-- Fonts CSS -->
