Move mustache.js to app-level js include file

--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -12,3 +12,4 @@
 <script src='/js/jquery.dataTables.min.js'></script>
 <script src='/js/dataTables.bootstrap4.min.js'></script>
 <script src='/js/functions.js'></script>
+<script src="/js/mustache.min.js"></script>
