Set isbn, ebook_version and ebook_page_count to add book form

--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -76,6 +76,27 @@
                         </div>
                     </div>
 
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="ebook_page_count">Ebook Page Count:</label>
+                            <input type="number" id="ebook_page_count" name="ebook_page_count"
+                                   placeholder="Ebook Page Count"
+                                   class="form-control">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="ebook_version">Use Ebook Version?</label>
+                            <select id="ebook_version" name="ebook_version" class="form-control">
+                                <option value="1">Yes</option>
+                                <option value="0">No</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="isbn">ISBN</label>
+                        <input id="isbn" name="isbn" placeholder="ISBN-13" class="form-control">
+                    </div>
+
                     <div class="form-group">
                         <label for="notes">Notes:</label>
                         <input id="notes" name="notes" placeholder="Notes" class="form-control">
